# trading-bot

./: .gitignore  Dockerfile  collector-config.yaml  collector-output.txt  docker-compose.yaml  otel-collector.yaml  pyproject.toml  requirements.txt  tempo.yaml
trades_db/: trades_db.db
trading_controller/: trade_control.py
trading_dao/: __init__.py  test_dao.ipynb  trade_dao.py
trading_service/: __init__.py  trade_service.py
