[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Simple Buy/Sell trading bot."
authors = ["Thomas Martin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
loguru = "^0.7.2"
duckdb = "^0.10.0"
alpaca-py = "^0.19.0"
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.3.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
